syntax = "proto3";

option csharp_namespace = "GrpcService";

message GetUserByIdRequest {
  int32 userId = 1;
}

// Request lấy user theo agencyId
message GetUsersByAgencyIdRequest {
  int32 agencyId = 1;
}

// User item
message UserReply {
  int32 id = 1;
  string userName = 2;
  string fullName = 3;
  string avartarUrl = 4;
  string email = 5;
  string phone = 6;
  string role = 7;
}

// Response chứa danh sách user
message UsersReply {
  repeated UserReply users = 1;
}

message AssignUserToAgencyRequest {
  int32 userId = 1;
  int32 agencyId = 2;
}

message AssignUserToAgencyReply {
  bool success = 1;
}
message RemoveUserFromAgencyRequest {
  int32 userId = 1;
  int32 agencyId = 2;
}

message RemoveUserFromAgencyReply {
  bool success = 1;
}

service UserGrpcService {
  rpc GetUserById (GetUserByIdRequest) returns (UserReply);
  rpc GetUsersByAgencyId (GetUsersByAgencyIdRequest) returns (UsersReply);
  rpc AssignUserToAgency(AssignUserToAgencyRequest) returns (AssignUserToAgencyReply);
  rpc RemoveUserFromAgency(RemoveUserFromAgencyRequest) returns (RemoveUserFromAgencyReply);
}
